test_files/netlist_footer_cmp/invalid/invalid_case_08_b.net
V1 IN 0 5
R2 IN OUT 2k
C1 OUT 0 1u
RLOAD OUT 0 {RLOAD}
.step param RLOAD list 1k 3k 5k
.op
.backanno
.end
